--- a/guessColorGame.html
+++ b/guessColorGame.html
@@ -9,8 +9,9 @@
     <script src="main.js"></script>
 </head>
 <body>
+<h1>Guess The Color!</h1>
 
-    <div class="container">
+    <div id="container">
         <div class="square"></div>
         <div class="square"></div>
         <div class="square"></div>
