--- a/guessColorGame.html
+++ b/guessColorGame.html
@@ -6,10 +6,9 @@
     <title>RGB Guessing Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="guessColorGame.css" />
-    <script src="main.js"></script>
 </head>
 <body>
-<h1>Guess The Color!</h1>
+<h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
 
     <div id="container">
         <div class="square"></div>
@@ -19,5 +18,7 @@
         <div class="square"></div>
         <div class="square"></div>
     </div>
+
+    <script type="text/javascript" src="guessColorGame.js"></script>
 </body>
 </html>
