--- a/guessColorGame.html
+++ b/guessColorGame.html
@@ -6,9 +6,15 @@
     <title>RGB Guessing Game</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="guessColorGame.css" />
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700" rel="stylesheet">
 </head>
 <body>
-<h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+<h1>The Great
+    <br>
+    <span id="colorDisplay">RGB</span>
+    <br>
+     Color Game
+    </h1>
 
     <div id="stripe">
         <button id="reset">New Colors</button>
